# django-types

./: .flake8  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: bump_version.yml  test.yml
django-stubs/: shortcuts.pyi
django-stubs/apps/: config.pyi  registry.pyi
django-stubs/conf/: global_settings.pyi
django-stubs/conf/urls/: __init__.pyi
django-stubs/contrib/admin/: checks.pyi  decorators.pyi  filters.pyi  helpers.pyi  models.pyi  options.pyi  sites.pyi  utils.pyi  widgets.pyi
django-stubs/contrib/admindocs/: middleware.pyi  utils.pyi
django-stubs/contrib/auth/: __init__.pyi  backends.pyi  base_user.pyi  checks.pyi  decorators.pyi  forms.pyi  hashers.pyi  mixins.pyi  models.pyi  password_validation.pyi  views.pyi
django-stubs/contrib/contenttypes/: checks.pyi  fields.pyi  models.pyi
django-stubs/contrib/messages/: api.pyi  context_processors.pyi
django-stubs/contrib/postgres/: constraints.pyi  indexes.pyi  search.pyi  validators.pyi
django-stubs/contrib/sessions/: base_session.pyi
django-stubs/contrib/sitemaps/: __init__.pyi  views.pyi
django-stubs/contrib/sites/: models.pyi
django-stubs/contrib/staticfiles/: checks.pyi  finders.pyi  storage.pyi  urls.pyi  utils.pyi
django-stubs/core/: exceptions.pyi  paginator.pyi  signing.pyi  validators.pyi
django-stubs/core/cache/: __init__.pyi  utils.pyi
django-stubs/core/checks/: async_checks.pyi  caches.pyi  model_checks.pyi  registry.pyi  templates.pyi  translation.pyi  urls.pyi
django-stubs/core/files/: base.pyi  storage.pyi  uploadedfile.pyi  uploadhandler.pyi
django-stubs/core/handlers/: wsgi.pyi
django-stubs/core/mail/: __init__.pyi  message.pyi
django-stubs/db/: transaction.pyi  utils.pyi
django-stubs/dispatch/: dispatcher.pyi
django-stubs/forms/: boundfield.pyi  fields.pyi  forms.pyi  formsets.pyi  models.pyi  utils.pyi  widgets.pyi
django-stubs/http/: multipartparser.pyi  request.pyi  response.pyi
django-stubs/middleware/: cache.pyi  csrf.pyi  security.pyi
django-stubs/template/: base.pyi  context.pyi  context_processors.pyi  defaultfilters.pyi  defaulttags.pyi  engine.pyi  exceptions.pyi  library.pyi  loader.pyi  loader_tags.pyi  response.pyi  smartif.pyi
django-stubs/templatetags/: cache.pyi  i18n.pyi
django-stubs/test/: client.pyi  html.pyi  runner.pyi  testcases.pyi  utils.pyi
django-stubs/urls/: base.pyi  conf.pyi  converters.pyi  resolvers.pyi  utils.pyi
django-stubs/utils/: autoreload.pyi  baseconv.pyi  cache.pyi  crypto.pyi  datastructures.pyi  decorators.pyi  deprecation.pyi  feedgenerator.pyi  formats.pyi  functional.pyi  html.pyi  http.pyi  jslex.pyi  log.pyi  numberformat.pyi  regex_helper.pyi  six.pyi  termcolors.pyi  text.pyi  timesince.pyi  timezone.pyi  tree.pyi  version.pyi  xmlutils.pyi
django-stubs/views/: debug.pyi  i18n.pyi
psycopg2-stubs/: __init__.pyi  extensions.pyi  extras.pyi  sql.pyi  tz.pyi
s/: lint  update-version
tests/pyright/: base.py  test_arrays.py  test_fields.py
tests/trout/: admin.py  models.py
(+96 files in other folders)
