[tool.poetry]
name = "django-types"
version = "0.17.0"
description = "Type stubs for Django"
repository = "https://github.com/sbdchd/django-types"
readme = "README.md"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "MIT"
keywords = ["django", "types", "mypy", "stubs"]

packages = [{ include = "django-stubs" }, { include = "psycopg2-stubs" }]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "7.1.1"
wheel = "0.35.1"
mypy = "0.942"
isort = "5.10.1"
Django = "3.1.7"
flake8 = "4.0.1"
flake8-pyi = "^20.10.0"
types-PyYAML = "^6.0.1"
types-pytz = "^2021.3.0"
psycopg2-binary = "^2.9.3"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
